@@ -1,5 +1,6 @@
 package com.example.swagger_hw.controller;
 
+import com.example.swagger_hw.model.Faculty;
 import com.example.swagger_hw.model.Student;
 import com.example.swagger_hw.service.StudentService;
 import org.springframework.web.bind.annotation.*;
@@ -39,10 +40,20 @@ public class StudentController {
     @GetMapping("/filter")
     public List<Student> filterStudentsByAge(@RequestParam int age) {
         return studentService.getStudents()
-                .values()
                 .stream()
                 .filter(student -> student.getAge() == age)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @GetMapping("/by-age")
+    public List<Student> getStudentsByAgeBetween(@RequestParam int min, @RequestParam int max) {
+        return studentService.findByAgeBetween(min, max);
+    }
+
+    @GetMapping("/{id}/faculty")
+    public Faculty getFacultyOfStudent(@PathVariable Long id) {
+        Student student = studentService.getStudent(id);
+        return student != null ? student.getFaculty() : null;
     }
 
 }
